<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_rock_paper_scissors"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/InstructionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_your_weapon"
            android:textSize="18sp" />

        <Button
            android:id="@+id/rockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playerChoseRock"
            android:text="@string/rock" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playerChosePaper"
            android:text="@string/paper" />

        <Button
            android:id="@+id/scissorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playerChoseScissors"
            android:text="@string/scissors" />

        <TextView
            android:id="@+id/ScoreOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/PlayerWeaponOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ComputerWeaponOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/OutcomeOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>